update exercise for 20240806 version and generated dummy datasets

--- a/rule_based_system_exercise.ipynb
+++ b/rule_based_system_exercise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "52cce64e-4f94-4c1e-913f-0a556130aa13",
    "metadata": {},
    "outputs": [],
@@ -16,161 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "ed81265e-3a8d-44a9-ad06-8e31e6e826d3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   client_id  credit_score                score_calculation\n",
-      "0          1           520  500+(3*10)-(0*5)-(0*3)-(10)+(0)\n",
-      "1          6           490  500+(1*10)-(0*5)-(0*3)-(20)+(0)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Ei Nghon Phoo\\AppData\\Local\\Temp\\ipykernel_17472\\533997506.py:125: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
-      "  df_grouped = df_active.groupby('client_id').apply(calculate_credit_score).reset_index()\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "# Constants\n",
-    "active_status_weight = 10\n",
-    "location_change_penalty = 5\n",
-    "mfi_penalty = 3\n",
-    "delay_penalties = {\n",
-    "    '0-10': 3,\n",
-    "    '11-30': 5,\n",
-    "    '30-60': 7,\n",
-    "    '61-90': 10,\n",
-    "    '91>': 15\n",
-    "}\n",
-    "loan_scenario_scores = {\n",
-    "    'matured': 20,\n",
-    "    'PAR': -10,\n",
-    "    'write_off': -30\n",
-    "}\n",
-    "\n",
-    "# Generate random loan term lengths between 8 to 20 months\n",
-    "np.random.seed(42)\n",
-    "data_size = 1000\n",
-    "loan_ids = np.random.randint(1, 21, data_size)\n",
-    "loan_terms = np.random.randint(8, 21, data_size)\n",
-    "\n",
-    "# Create DataFrame\n",
-    "df = pd.DataFrame({\n",
-    "    'loan_id': loan_ids,\n",
-    "    'client_id': np.random.randint(1, 7, data_size),\n",
-    "    'month': np.random.randint(1, 13, data_size),\n",
-    "    'year': np.random.randint(2020, 2023, data_size),\n",
-    "    'active_status': np.random.choice([True], data_size),  # All records have active_status=True\n",
-    "    'location': np.random.choice(['Location1', 'Location2', 'Location3', 'Location4'], data_size),\n",
-    "    'days_in_delay': np.random.choice(['no delay', '0-10', '11-30', '30-60', '61-90', '91>'], data_size),\n",
-    "    'loan_scenario': np.random.choice(['matured', 'PAR', 'write_off', ''], data_size),\n",
-    "    'loan_term': loan_terms\n",
-    "})\n",
-    "\n",
-    "# Assign consistent MFI for each loan_id\n",
-    "mfi_choices = ['MFI1', 'MFI2', 'MFI3', 'MFI4']\n",
-    "mfi_map = {loan_id: np.random.choice(mfi_choices) for loan_id in df['loan_id'].unique()}\n",
-    "df['MFI'] = df['loan_id'].map(mfi_map)\n",
-    "\n",
-    "# Ensure the loan scenario is only at the end of the loan term\n",
-    "df['loan_scenario'] = df.apply(lambda x: x['loan_scenario'] if x['month'] == x['loan_term'] else '', axis=1)\n",
-    "\n",
-    "# Remove rows where the borrower changes locations within the same month for the same loan\n",
-    "df = df.sort_values(by=['loan_id', 'client_id', 'year', 'month'])\n",
-    "df = df[~df.duplicated(subset=['loan_id', 'year', 'month', 'client_id', 'location'], keep='first')]\n",
-    "\n",
-    "# Calculate location changes and cumulative counts\n",
-    "def calculate_location_changes(df):\n",
-    "    df['location_change'] = (df['location'] != df.groupby(['loan_id', 'client_id', 'year', 'MFI'])['location'].shift()).astype(int)\n",
-    "    df['location_change_count'] = df.groupby(['loan_id', 'client_id', 'year', 'MFI'])['location_change'].cumsum()\n",
-    "    return df\n",
-    "\n",
-    "df = calculate_location_changes(df)\n",
-    "\n",
-    "# Filter out records where location changes exceed the allowed limit\n",
-    "def filter_location_changes(df):\n",
-    "    valid_records = []\n",
-    "    for (client_id, mfi, year), group in df.groupby(['client_id', 'MFI', 'year']):\n",
-    "        if group['location_change'].sum() <= 3:\n",
-    "            valid_records.append(group)\n",
-    "    return pd.concat(valid_records)\n",
-    "\n",
-    "df_filtered = filter_location_changes(df)\n",
-    "\n",
-    "# Calculate credit score function\n",
-    "def calculate_credit_score(group):\n",
-    "    initial_score = 500\n",
-    "    score = initial_score\n",
-    "    \n",
-    "    # Rule: Active status score (count each month once)\n",
-    "    active_months = group.groupby(['month', 'year'])['active_status'].sum().clip(upper=1).sum()\n",
-    "    active_status_score = active_months * active_status_weight\n",
-    "    score += active_status_score\n",
-    "    \n",
-    "    # Rule: Location changes in one MFI more than 3 times in a year\n",
-    "    location_change_penalty_score = 0\n",
-    "    for mfi, mfi_group in group.groupby('MFI'):\n",
-    "        location_changes = (mfi_group['location'] != mfi_group['location'].shift()).sum()\n",
-    "        if location_changes > 3:\n",
-    "            location_change_penalty_score += (location_changes - 3) * location_change_penalty\n",
-    "    \n",
-    "    score -= location_change_penalty_score\n",
-    "    \n",
-    "    # Rule: Borrowing from multiple MFIs\n",
-    "    mfi_penalty_score = 0\n",
-    "    mfi_counts = group['MFI'].nunique()\n",
-    "    if mfi_counts > 1:\n",
-    "        mfi_penalty_score += (mfi_counts - 1) * mfi_penalty\n",
-    "    \n",
-    "    score -= mfi_penalty_score\n",
-    "    \n",
-    "    # Rule: Penalty for delays in loan repayment\n",
-    "    delay_penalty_score = 0\n",
-    "    for delay_range, penalty in delay_penalties.items():\n",
-    "        delay_count = group[group['days_in_delay'] == delay_range].shape[0]\n",
-    "        delay_penalty_score += delay_count * penalty\n",
-    "    \n",
-    "    score -= delay_penalty_score\n",
-    "    \n",
-    "    # Rule: Loan scenario at the end of the loan term\n",
-    "    loan_scenario_score = 0\n",
-    "    for scenario, penalty in loan_scenario_scores.items():\n",
-    "        scenario_count = group[(group['loan_scenario'] == scenario) & (group['month'] == group['loan_term'])].shape[0]\n",
-    "        loan_scenario_score += scenario_count * penalty\n",
-    "    \n",
-    "    score += loan_scenario_score\n",
-    "    \n",
-    "    # Creating the score calculation detail string\n",
-    "    calculation_detail = (f\"{initial_score}+({active_months}*{active_status_weight})\"\n",
-    "                          f\"-({location_change_penalty_score // location_change_penalty}*{location_change_penalty})\"\n",
-    "                          f\"-({mfi_penalty_score // mfi_penalty}*{mfi_penalty})\"\n",
-    "                          f\"-({delay_penalty_score})+({loan_scenario_score})\")\n",
-    "    \n",
-    "    return pd.Series({'credit_score': score, 'score_calculation': calculation_detail})\n",
-    "\n",
-    "# Filter only active status records\n",
-    "df_active = df_filtered[df_filtered['active_status'] == True]\n",
-    "\n",
-    "# Group by 'client_id' and apply the calculate_credit_score function\n",
-    "df_grouped = df_active.groupby('client_id').apply(calculate_credit_score).reset_index()\n",
-    "\n",
-    "print(df_grouped)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "35fef3ec-0888-4df7-a15b-51d924dea832",
    "metadata": {},
    "outputs": [
@@ -372,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "a2101645-7071-4ea6-b58b-24bcbbead070",
    "metadata": {},
    "outputs": [
@@ -431,8 +277,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "69b0c246-90d7-4523-9549-8b760774f59d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## exporting data\n",
+    "df_grouped.to_csv('client_level_scores.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b9b951ab-8d46-4720-8b64-e31fa1fdc1cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_active.to_csv('loan_level_history_data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61cc360a-6d63-44a7-ba71-d069968ed7ad",
    "metadata": {},
    "outputs": [],
    "source": []
