exploring the ways of updating scores for upcoming months

--- a/rule_based_system_exercise.ipynb
+++ b/rule_based_system_exercise.ipynb
@@ -302,7 +302,69 @@
    "id": "61cc360a-6d63-44a7-ba71-d069968ed7ad",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Sample input data\n",
+    "data_size = 100\n",
+    "loan_ids = np.arange(1, data_size + 1)\n",
+    "loan_terms = np.random.choice([12, 24, 36, 48], data_size)\n",
+    "\n",
+    "# Create the input DataFrame\n",
+    "df = pd.DataFrame({\n",
+    "    'loan_id': loan_ids,\n",
+    "    'client_id': np.random.randint(1, 21, data_size),\n",
+    "    'month': np.random.randint(1, 13, data_size),\n",
+    "    'year': np.random.randint(2020, 2023, data_size),\n",
+    "    'active_status': np.random.choice([True], data_size),\n",
+    "    'location': np.random.choice(['Location1', 'Location2', 'Location3', 'Location4'], data_size),\n",
+    "    'days_in_delay': np.random.choice(['no delay', '0-10', '11-30', '30-60', '61-90', '91>'], data_size),\n",
+    "    'loan_scenario': np.random.choice(['matured', 'PAR', 'write_off', ''], data_size),\n",
+    "    'loan_term': loan_terms\n",
+    "})\n",
+    "\n",
+    "# Function to calculate score\n",
+    "def calculate_score(row):\n",
+    "    # Example scoring logic\n",
+    "    score = 0\n",
+    "    if row['days_in_delay'] == 'no delay':\n",
+    "        score += 10\n",
+    "    elif row['days_in_delay'] == '0-10':\n",
+    "        score += 8\n",
+    "    elif row['days_in_delay'] == '11-30':\n",
+    "        score += 5\n",
+    "    elif row['days_in_delay'] == '30-60':\n",
+    "        score += 2\n",
+    "    elif row['days_in_delay'] == '61-90':\n",
+    "        score += 1\n",
+    "    elif row['days_in_delay'] == '91>':\n",
+    "        score -= 5\n",
+    "\n",
+    "    if row['loan_scenario'] == 'matured':\n",
+    "        score += 5\n",
+    "    elif row['loan_scenario'] == 'PAR':\n",
+    "        score -= 2\n",
+    "    elif row['loan_scenario'] == 'write_off':\n",
+    "        score -= 10\n",
+    "\n",
+    "    return score\n",
+    "\n",
+    "# Calculate scores for each record\n",
+    "df['score'] = df.apply(calculate_score, axis=1)\n",
+    "\n",
+    "# Group by client_id, year, and month to calculate the latest checkpoint score\n",
+    "grouped = df.groupby(['client_id', 'year', 'month']).agg({'score': 'sum'}).reset_index()\n",
+    "\n",
+    "# Format month in YYYYMM format\n",
+    "grouped['YYYYMM'] = grouped['year'].astype(str) + grouped['month'].apply(lambda x: f'{x:02d}')\n",
+    "\n",
+    "# Prepare the output DataFrame\n",
+    "output_df = grouped[['client_id', 'YYYYMM', 'score']]\n",
+    "\n",
+    "# Display the output DataFrame\n",
+    "print(output_df)\n"
+   ]
   }
  ],
  "metadata": {
