--- a/rule_based_system_exercise_testing.ipynb
+++ b/rule_based_system_exercise_testing.ipynb
@@ -1462,16 +1462,557 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "90ab036f-e7ff-4ea5-9024-8e871b6d7ebd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "new scores for second dataframe\n",
+      "   client_id  score   month\n",
+      "0          1      9  202312\n",
+      "1          2      0  202312\n",
+      "2          3      6  202312\n",
+      "3          4      3  202312\n",
+      "4          5      9  202312\n",
+      "merged score dataframe\n",
+      "   client_id  score   month\n",
+      "0          1     15  202304\n",
+      "1          1      9  202312\n",
+      "2          2     12  202312\n",
+      "3          2     12  202304\n",
+      "4          3     15  202312\n",
+      "5          3      9  202304\n",
+      "6          4     15  202312\n",
+      "7          4     12  202304\n",
+      "8          5     21  202312\n",
+      "9          5     12  202304\n",
+      "First Dataset:\n",
+      "   client_id  loan_id delay   month  score\n",
+      "0          1        1    no  202301      0\n",
+      "1          1        1   yes  202302      3\n",
+      "2          1        1    no  202303      0\n",
+      "3          1        1   yes  202304      3\n",
+      "4          1        2    no  202301      0\n",
+      "\n",
+      "Client Scores:\n",
+      "   client_id  score   month\n",
+      "0          1      6  202304\n",
+      "1          2     12  202304\n",
+      "2          3      9  202304\n",
+      "3          4     12  202304\n",
+      "4          5     12  202304\n",
+      "\n",
+      "Second Dataset:\n",
+      "   client_id  loan_id delay   month  score\n",
+      "0          1        1    no  202311      0\n",
+      "1          1        1   yes  202312      3\n",
+      "2          1        2   yes  202311      3\n",
+      "3          1        2   yes  202312      3\n",
+      "4          2        1    no  202311      0\n",
+      "\n",
+      "Updated Client Scores:\n",
+      "   client_id  score   month\n",
+      "0          1     15  202304\n",
+      "1          1      9  202312\n",
+      "2          2     12  202312\n",
+      "3          2     12  202304\n",
+      "4          3     15  202312\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Ei Nghon Phoo\\AppData\\Local\\Temp\\ipykernel_21704\\2823532659.py:68: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  updated_scores = updated_scores.groupby('client_id').apply(update_latest_scores).reset_index(drop=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Constants\n",
+    "num_clients = 5\n",
+    "loans_per_client = 2\n",
+    "months_first = pd.date_range(start='2023-01-01', end='2023-04-01', freq='MS')\n",
+    "months_second = pd.date_range(start='2023-11-01', end='2023-12-01', freq='MS')\n",
+    "\n",
+    "# Generate first dataset\n",
+    "first_data = []\n",
+    "\n",
+    "for client_id in range(1, num_clients + 1):\n",
+    "    for loan_id in range(1, loans_per_client + 1):\n",
+    "        for month in months_first:\n",
+    "            delay = np.random.choice(['yes', 'no'])\n",
+    "            first_data.append({\n",
+    "                'client_id': client_id,\n",
+    "                'loan_id': loan_id,\n",
+    "                'delay': delay,\n",
+    "                'month': month.strftime('%Y%m')\n",
+    "            })\n",
+    "\n",
+    "first_df = pd.DataFrame(first_data)\n",
+    "\n",
+    "# Calculate scores for the first dataset\n",
+    "def calculate_score(df):\n",
+    "    df['score'] = df['delay'].apply(lambda x: 3 if x == 'yes' else 0)\n",
+    "    client_scores = df.groupby('client_id').agg({\n",
+    "        'score': 'sum',\n",
+    "        'month': 'max'\n",
+    "    }).reset_index()\n",
+    "    return client_scores\n",
+    "\n",
+    "client_scores = calculate_score(first_df)\n",
+    "\n",
+    "# Generate second dataset\n",
+    "second_data = []\n",
+    "\n",
+    "for client_id in range(1, num_clients + 1):\n",
+    "    for loan_id in range(1, loans_per_client + 1):\n",
+    "        for month in months_second:\n",
+    "            delay = np.random.choice(['yes', 'no'])\n",
+    "            second_data.append({\n",
+    "                'client_id': client_id,\n",
+    "                'loan_id': loan_id,\n",
+    "                'delay': delay,\n",
+    "                'month': month.strftime('%Y%m')\n",
+    "            })\n",
+    "\n",
+    "second_df = pd.DataFrame(second_data)\n",
+    "\n",
+    "def update_latest_scores(group):\n",
+    "    if len(group) > 1:\n",
+    "        # Add the score of the second latest month to the latest month\n",
+    "        group.iloc[0, group.columns.get_loc('score')] += group.iloc[1]['score']\n",
+    "    return group\n",
+    "\n",
+    "# Update scores with the second dataset\n",
+    "def update_scores(client_scores, second_dataframe):\n",
+    "    second_df['score'] = second_df['delay'].apply(lambda x: 3 if x == 'yes' else 0)\n",
+    "    new_scores = second_df.groupby('client_id').agg({\n",
+    "        'score': 'sum',\n",
+    "        'month': 'max'\n",
+    "    }).reset_index()\n",
+    "\n",
+    "    updated_scores = pd.merge(client_scores, new_scores, on=['client_id', 'score','month'], how='outer')\n",
+    "    updated_scores = updated_scores.groupby('client_id').apply(update_latest_scores).reset_index(drop=True)\n",
+    "    print(\"new scores for second dataframe\")\n",
+    "    print(new_scores)\n",
+    "    print(\"merged score dataframe\")\n",
+    "    print(updated_scores)\n",
+    "    \n",
+    "    return updated_scores\n",
+    "\n",
+    "client_scores_update = update_scores(client_scores, second_df)\n",
+    "\n",
+    "# Display results\n",
+    "print(\"First Dataset:\")\n",
+    "print(first_df.head())\n",
+    "print(\"\\nClient Scores:\")\n",
+    "print(client_scores.head())\n",
+    "print(\"\\nSecond Dataset:\")\n",
+    "print(second_df.head())\n",
+    "print(\"\\nUpdated Client Scores:\")\n",
+    "print(client_scores_update.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "6d6a466f-b0ba-4bf5-bb2b-4e02bdf3e221",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    client_id  loan_id delay   month  score\n",
+      "8           2        1    no  202301      0\n",
+      "9           2        1    no  202302      0\n",
+      "10          2        1    no  202303      0\n",
+      "11          2        1   yes  202304      3\n",
+      "12          2        2   yes  202301      3\n",
+      "13          2        2   yes  202302      3\n",
+      "14          2        2   yes  202303      3\n",
+      "15          2        2   yes  202304      3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(first_df[first_df['client_id'] ==2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "73dbd510-e170-4624-b8de-0d61c997f447",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   client_id  loan_id delay   month  score\n",
+      "4          2        1    no  202311      0\n",
+      "5          2        1   yes  202312      3\n",
+      "6          2        2    no  202311      0\n",
+      "7          2        2   yes  202312      3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(second_df[second_df['client_id'] ==2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "f7b4f11c-4fd9-4779-bfd2-524e9cbf11a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    client_id  loan_id delay   month\n",
+      "0           1        1    no  202401\n",
+      "1           1        1    no  202402\n",
+      "2           1        1    no  202403\n",
+      "3           1        2    no  202401\n",
+      "4           1        2    no  202402\n",
+      "5           1        2    no  202403\n",
+      "6           2        1    no  202401\n",
+      "7           2        1    no  202402\n",
+      "8           2        1   yes  202403\n",
+      "9           2        2    no  202401\n",
+      "10          2        2    no  202402\n",
+      "11          2        2   yes  202403\n",
+      "12          3        1   yes  202401\n",
+      "13          3        1   yes  202402\n",
+      "14          3        1   yes  202403\n",
+      "15          3        2   yes  202401\n",
+      "16          3        2    no  202402\n",
+      "17          3        2    no  202403\n",
+      "18          4        1    no  202401\n",
+      "19          4        1   yes  202402\n",
+      "20          4        1    no  202403\n",
+      "21          4        2    no  202401\n",
+      "22          4        2   yes  202402\n",
+      "23          4        2    no  202403\n",
+      "24          5        1   yes  202401\n",
+      "25          5        1    no  202402\n",
+      "26          5        1    no  202403\n",
+      "27          5        2   yes  202401\n",
+      "28          5        2    no  202402\n",
+      "29          5        2   yes  202403\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate second dataset\n",
+    "third_data = []\n",
+    "num_clients = 5\n",
+    "loans_per_client = 2\n",
+    "months_third = pd.date_range(start='2024-01-01', end='2024-03-01', freq='MS')\n",
+    "for client_id in range(1, num_clients + 1):\n",
+    "    for loan_id in range(1, loans_per_client + 1):\n",
+    "        for month in months_third:\n",
+    "            delay = np.random.choice(['yes', 'no'])\n",
+    "            third_data.append({\n",
+    "                'client_id': client_id,\n",
+    "                'loan_id': loan_id,\n",
+    "                'delay': delay,\n",
+    "                'month': month.strftime('%Y%m')\n",
+    "            })\n",
+    "\n",
+    "third_df = pd.DataFrame(third_data)\n",
+    "print(third_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "ffe70a3e-cf54-4164-a4cd-8c9430135c7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   client_id  score   month\n",
+      "0          1      9  202312\n",
+      "1          2      6  202312\n",
+      "2          3      9  202312\n",
+      "3          4      0  202312\n",
+      "4          5      0  202312\n",
+      "    client_id  score   month\n",
+      "0           1     21  202312\n",
+      "1           1     12  202304\n",
+      "2           1     21  202312\n",
+      "3           2     15  202312\n",
+      "4           2      9  202304\n",
+      "5           2     15  202312\n",
+      "6           3     24  202312\n",
+      "7           3     15  202304\n",
+      "8           4     12  202312\n",
+      "9           4     12  202304\n",
+      "10          4     12  202312\n",
+      "11          5     12  202312\n",
+      "12          5     12  202304\n",
+      "13          5     12  202312\n",
+      "    client_id  score   month\n",
+      "0           1     21  202312\n",
+      "1           1     12  202304\n",
+      "2           1     21  202312\n",
+      "3           2     15  202312\n",
+      "4           2      9  202304\n",
+      "5           2     15  202312\n",
+      "6           3     24  202312\n",
+      "7           3     15  202304\n",
+      "8           4     12  202312\n",
+      "9           4     12  202304\n",
+      "10          4     12  202312\n",
+      "11          5     12  202312\n",
+      "12          5     12  202304\n",
+      "13          5     12  202312\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Ei Nghon Phoo\\AppData\\Local\\Temp\\ipykernel_21704\\3616874777.py:68: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  updated_scores = updated_scores.groupby('client_id').apply(update_latest_scores).reset_index(drop=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "client_scores_update_third_time = update_scores(client_scores_update, third_df)\n",
+    "print(client_scores_update_third_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "70e681a3-7a43-4663-ab07-427bc590c75f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   client_id  score   month\n",
+      "0          1      0  202403\n",
+      "1          2      6  202403\n",
+      "2          3     12  202403\n",
+      "3          4      6  202403\n",
+      "4          5      9  202403\n"
+     ]
+    }
+   ],
+   "source": [
+    "client_scores_test = calculate_score(third_df)\n",
+    "print(client_scores_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "cd8115bd-3d0f-420e-969a-849dc8f10502",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>client_id</th>\n",
+       "      <th>score</th>\n",
+       "      <th>month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>202304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>202312</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>21</td>\n",
+       "      <td>202312</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>15</td>\n",
+       "      <td>202304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>21</td>\n",
+       "      <td>202312</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>3</td>\n",
+       "      <td>15</td>\n",
+       "      <td>202304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>4</td>\n",
+       "      <td>15</td>\n",
+       "      <td>202312</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "      <td>202304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>5</td>\n",
+       "      <td>15</td>\n",
+       "      <td>202312</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>5</td>\n",
+       "      <td>9</td>\n",
+       "      <td>202304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>6</td>\n",
+       "      <td>12</td>\n",
+       "      <td>202312</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>202304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>7</td>\n",
+       "      <td>15</td>\n",
+       "      <td>202312</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>7</td>\n",
+       "      <td>9</td>\n",
+       "      <td>202304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>8</td>\n",
+       "      <td>21</td>\n",
+       "      <td>202312</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>8</td>\n",
+       "      <td>15</td>\n",
+       "      <td>202304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>9</td>\n",
+       "      <td>18</td>\n",
+       "      <td>202312</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>9</td>\n",
+       "      <td>18</td>\n",
+       "      <td>202304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>10</td>\n",
+       "      <td>21</td>\n",
+       "      <td>202312</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>10</td>\n",
+       "      <td>15</td>\n",
+       "      <td>202304</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    client_id  score   month\n",
+       "0           1     12  202304\n",
+       "1           1      6  202312\n",
+       "2           2     21  202312\n",
+       "3           2     15  202304\n",
+       "4           3     21  202312\n",
+       "5           3     15  202304\n",
+       "6           4     15  202312\n",
+       "7           4      9  202304\n",
+       "8           5     15  202312\n",
+       "9           5      9  202304\n",
+       "10          6     12  202312\n",
+       "11          6      9  202304\n",
+       "12          7     15  202312\n",
+       "13          7      9  202304\n",
+       "14          8     21  202312\n",
+       "15          8     15  202304\n",
+       "16          9     18  202312\n",
+       "17          9     18  202304\n",
+       "18         10     21  202312\n",
+       "19         10     15  202304"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client_scores_update"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d6a466f-b0ba-4bf5-bb2b-4e02bdf3e221",
+   "id": "143e2c88-a8ad-4f51-aa02-de3852e85295",
    "metadata": {},
    "outputs": [],
    "source": []
