--- a/rule_based_system_exercise_testing.ipynb
+++ b/rule_based_system_exercise_testing.ipynb
@@ -1457,12 +1457,12 @@
    ],
    "source": [
     "from IPython.display import HTML\n",
-    "HTML('<h1>Hello, world!</h1>')\n"
+    "HTML('<h1>creating datasets</h1>')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 54,
    "id": "90ab036f-e7ff-4ea5-9024-8e871b6d7ebd",
    "metadata": {},
    "outputs": [
@@ -1470,64 +1470,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "new scores for second dataframe\n",
-      "   client_id  score   month\n",
-      "0          1      9  202312\n",
-      "1          2      0  202312\n",
-      "2          3      6  202312\n",
-      "3          4      3  202312\n",
-      "4          5      9  202312\n",
-      "merged score dataframe\n",
-      "   client_id  score   month\n",
-      "0          1     15  202304\n",
-      "1          1      9  202312\n",
-      "2          2     12  202312\n",
-      "3          2     12  202304\n",
-      "4          3     15  202312\n",
-      "5          3      9  202304\n",
-      "6          4     15  202312\n",
-      "7          4     12  202304\n",
-      "8          5     21  202312\n",
-      "9          5     12  202304\n",
-      "First Dataset:\n",
-      "   client_id  loan_id delay   month  score\n",
-      "0          1        1    no  202301      0\n",
-      "1          1        1   yes  202302      3\n",
-      "2          1        1    no  202303      0\n",
-      "3          1        1   yes  202304      3\n",
-      "4          1        2    no  202301      0\n",
-      "\n",
-      "Client Scores:\n",
-      "   client_id  score   month\n",
-      "0          1      6  202304\n",
-      "1          2     12  202304\n",
-      "2          3      9  202304\n",
-      "3          4     12  202304\n",
-      "4          5     12  202304\n",
-      "\n",
-      "Second Dataset:\n",
-      "   client_id  loan_id delay   month  score\n",
-      "0          1        1    no  202311      0\n",
-      "1          1        1   yes  202312      3\n",
-      "2          1        2   yes  202311      3\n",
-      "3          1        2   yes  202312      3\n",
-      "4          2        1    no  202311      0\n",
-      "\n",
-      "Updated Client Scores:\n",
-      "   client_id  score   month\n",
-      "0          1     15  202304\n",
-      "1          1      9  202312\n",
-      "2          2     12  202312\n",
-      "3          2     12  202304\n",
-      "4          3     15  202312\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Ei Nghon Phoo\\AppData\\Local\\Temp\\ipykernel_21704\\2823532659.py:68: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
-      "  updated_scores = updated_scores.groupby('client_id').apply(update_latest_scores).reset_index(drop=True)\n"
+      "(40, 4)\n",
+      "(80, 4)\n",
+      "(30, 4)\n"
      ]
     }
    ],
@@ -1539,7 +1484,8 @@
     "num_clients = 5\n",
     "loans_per_client = 2\n",
     "months_first = pd.date_range(start='2023-01-01', end='2023-04-01', freq='MS')\n",
-    "months_second = pd.date_range(start='2023-11-01', end='2023-12-01', freq='MS')\n",
+    "months_second = pd.date_range(start='2023-05-01', end='2023-12-01', freq='MS')\n",
+    "months_third = pd.date_range(start='2024-01-01', end='2024-03-01', freq='MS')\n",
     "\n",
     "# Generate first dataset\n",
     "first_data = []\n",
@@ -1557,17 +1503,6 @@
     "\n",
     "first_df = pd.DataFrame(first_data)\n",
     "\n",
-    "# Calculate scores for the first dataset\n",
-    "def calculate_score(df):\n",
-    "    df['score'] = df['delay'].apply(lambda x: 3 if x == 'yes' else 0)\n",
-    "    client_scores = df.groupby('client_id').agg({\n",
-    "        'score': 'sum',\n",
-    "        'month': 'max'\n",
-    "    }).reset_index()\n",
-    "    return client_scores\n",
-    "\n",
-    "client_scores = calculate_score(first_df)\n",
-    "\n",
     "# Generate second dataset\n",
     "second_data = []\n",
     "\n",
@@ -1584,14 +1519,48 @@
     "\n",
     "second_df = pd.DataFrame(second_data)\n",
     "\n",
-    "def update_latest_scores(group):\n",
-    "    if len(group) > 1:\n",
-    "        # Add the score of the second latest month to the latest month\n",
-    "        group.iloc[0, group.columns.get_loc('score')] += group.iloc[1]['score']\n",
-    "    return group\n",
+    "# Generate third dataset\n",
+    "third_data = []\n",
+    "num_clients = 5\n",
+    "loans_per_client = 2\n",
+    "for client_id in range(1, num_clients + 1):\n",
+    "    for loan_id in range(1, loans_per_client + 1):\n",
+    "        for month in months_third:\n",
+    "            delay = np.random.choice(['yes', 'no'])\n",
+    "            third_data.append({\n",
+    "                'client_id': client_id,\n",
+    "                'loan_id': loan_id,\n",
+    "                'delay': delay,\n",
+    "                'month': month.strftime('%Y%m')\n",
+    "            })\n",
+    "\n",
+    "third_df = pd.DataFrame(third_data)\n",
+    "\n",
+    "print(first_df.shape)\n",
+    "print(second_df.shape)\n",
+    "print(third_df.shape)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "20a16341-0c8e-48a2-9e31-580752235349",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## score calculation functions\n",
+    "# Calculate scores for the first dataset\n",
+    "def calculate_initial_score(df):\n",
+    "    df['score'] = df['delay'].apply(lambda x: 3 if x == 'yes' else 0)\n",
+    "    client_scores = df.groupby('client_id').agg({\n",
+    "        'score': 'sum',\n",
+    "        'month': 'max'\n",
+    "    }).reset_index()\n",
+    "    return client_scores\n",
     "\n",
     "# Update scores with the second dataset\n",
-    "def update_scores(client_scores, second_dataframe):\n",
+    "def update_additional_month_scores(client_scores, second_dataframe):\n",
     "    second_df['score'] = second_df['delay'].apply(lambda x: 3 if x == 'yes' else 0)\n",
     "    new_scores = second_df.groupby('client_id').agg({\n",
     "        'score': 'sum',\n",
@@ -1607,17 +1576,74 @@
     "    \n",
     "    return updated_scores\n",
     "\n",
-    "client_scores_update = update_scores(client_scores, second_df)\n",
-    "\n",
+    "def update_latest_scores(group):\n",
+    "    if len(group) > 1:\n",
+    "        # Add the score of the second latest month to the latest month\n",
+    "        group.iloc[0, group.columns.get_loc('score')] += group.iloc[1]['score']\n",
+    "    return group"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "8c969a06-3beb-46d9-8914-8e250a0e6129",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "new scores for second dataframe\n",
+      "   client_id  score   month\n",
+      "0          1     33  202312\n",
+      "1          2     33  202312\n",
+      "2          3     21  202312\n",
+      "3          4     15  202312\n",
+      "4          5     21  202312\n",
+      "merged score dataframe\n",
+      "   client_id  score   month\n",
+      "0          1     48  202304\n",
+      "1          1     33  202312\n",
+      "2          2     51  202304\n",
+      "3          2     33  202312\n",
+      "4          3     30  202304\n",
+      "5          3     21  202312\n",
+      "6          4     30  202304\n",
+      "7          4     15  202312\n",
+      "8          5     30  202304\n",
+      "9          5     21  202312\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Ei Nghon Phoo\\AppData\\Local\\Temp\\ipykernel_21704\\2823532659.py:68: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  updated_scores = updated_scores.groupby('client_id').apply(update_latest_scores).reset_index(drop=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "client_initial_scores = calculate_initial_score(first_df)\n",
+    "client_scores_update = update_scores(client_initial_scores, second_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac5cdb82-25aa-4f95-b442-365eb8e73e9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Display results\n",
     "print(\"First Dataset:\")\n",
     "print(first_df.head())\n",
     "print(\"\\nClient Scores:\")\n",
-    "print(client_scores.head())\n",
+    "print(client_initial_scores.head())\n",
     "print(\"\\nSecond Dataset:\")\n",
     "print(second_df.head())\n",
     "print(\"\\nUpdated Client Scores:\")\n",
-    "print(client_scores_update.head())\n"
+    "print(client_scores_update.head())"
    ]
   },
   {
@@ -1666,71 +1692,6 @@
    ],
    "source": [
     "print(second_df[second_df['client_id'] ==2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "f7b4f11c-4fd9-4779-bfd2-524e9cbf11a9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    client_id  loan_id delay   month\n",
-      "0           1        1    no  202401\n",
-      "1           1        1    no  202402\n",
-      "2           1        1    no  202403\n",
-      "3           1        2    no  202401\n",
-      "4           1        2    no  202402\n",
-      "5           1        2    no  202403\n",
-      "6           2        1    no  202401\n",
-      "7           2        1    no  202402\n",
-      "8           2        1   yes  202403\n",
-      "9           2        2    no  202401\n",
-      "10          2        2    no  202402\n",
-      "11          2        2   yes  202403\n",
-      "12          3        1   yes  202401\n",
-      "13          3        1   yes  202402\n",
-      "14          3        1   yes  202403\n",
-      "15          3        2   yes  202401\n",
-      "16          3        2    no  202402\n",
-      "17          3        2    no  202403\n",
-      "18          4        1    no  202401\n",
-      "19          4        1   yes  202402\n",
-      "20          4        1    no  202403\n",
-      "21          4        2    no  202401\n",
-      "22          4        2   yes  202402\n",
-      "23          4        2    no  202403\n",
-      "24          5        1   yes  202401\n",
-      "25          5        1    no  202402\n",
-      "26          5        1    no  202403\n",
-      "27          5        2   yes  202401\n",
-      "28          5        2    no  202402\n",
-      "29          5        2   yes  202403\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Generate second dataset\n",
-    "third_data = []\n",
-    "num_clients = 5\n",
-    "loans_per_client = 2\n",
-    "months_third = pd.date_range(start='2024-01-01', end='2024-03-01', freq='MS')\n",
-    "for client_id in range(1, num_clients + 1):\n",
-    "    for loan_id in range(1, loans_per_client + 1):\n",
-    "        for month in months_third:\n",
-    "            delay = np.random.choice(['yes', 'no'])\n",
-    "            third_data.append({\n",
-    "                'client_id': client_id,\n",
-    "                'loan_id': loan_id,\n",
-    "                'delay': delay,\n",
-    "                'month': month.strftime('%Y%m')\n",
-    "            })\n",
-    "\n",
-    "third_df = pd.DataFrame(third_data)\n",
-    "print(third_df)"
    ]
   },
   {
@@ -2011,8 +1972,181 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 52,
+   "id": "0272c896-2577-48ab-9b36-95ce04dad132",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   client_id  score   month\n",
+      "0          1     51  202310\n",
+      "1          1     66  202312\n",
+      "2          1     80  202410\n",
+      "3          2     31  202312\n",
+      "4          2     90  202410\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Create the first DataFrame\n",
+    "data1 = {\n",
+    "    'client_id': [1, 1, 2],\n",
+    "    'score': [66, 51, 31],\n",
+    "    'month': [202312, 202310, 202312]\n",
+    "}\n",
+    "df1 = pd.DataFrame(data1)\n",
+    "\n",
+    "# Create the second DataFrame\n",
+    "data2 = {\n",
+    "    'client_id': [1, 2],\n",
+    "    'score': [14, 59],\n",
+    "    'month': [202410, 202410]\n",
+    "}\n",
+    "df2 = pd.DataFrame(data2)\n",
+    "\n",
+    "# Step 1: Update the score for the latest month in df1\n",
+    "# Create a list to hold new rows\n",
+    "new_rows = []\n",
+    "\n",
+    "# Get the latest month score for each client from df2\n",
+    "for index, row in df2.iterrows():\n",
+    "    client_id = row['client_id']\n",
+    "    new_month = row['month']\n",
+    "    new_score = row['score']\n",
+    "    \n",
+    "    # Find the latest month score for the client in df1\n",
+    "    if client_id in df1['client_id'].values:\n",
+    "        # Update the score for the latest month\n",
+    "        latest_month_score = df1.loc[df1['client_id'] == client_id, 'score'].iloc[0]\n",
+    "        updated_score = latest_month_score + new_score\n",
+    "        \n",
+    "        # Create a new row for the updated score\n",
+    "        new_rows.append({'client_id': client_id, 'score': updated_score, 'month': new_month})\n",
+    "\n",
+    "# Step 2: Ensure all clients from df2 are included in df1\n",
+    "for index, row in df2.iterrows():\n",
+    "    client_id = row['client_id']\n",
+    "    new_month = row['month']\n",
+    "    \n",
+    "    if client_id not in df1['client_id'].values:\n",
+    "        # If the client is not in df1, add their score and month\n",
+    "        new_rows.append({'client_id': client_id, 'score': row['score'], 'month': new_month})\n",
+    "\n",
+    "# Create a DataFrame from the new rows and concatenate it with df1\n",
+    "if new_rows:\n",
+    "    new_df = pd.DataFrame(new_rows)\n",
+    "    df1 = pd.concat([df1, new_df], ignore_index=True)\n",
+    "\n",
+    "# Step 3: Sort the DataFrame by client_id and month for better readability\n",
+    "df1 = df1.sort_values(by=['client_id', 'month']).reset_index(drop=True)\n",
+    "\n",
+    "# Display the updated DataFrame\n",
+    "print(df1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "dab932d7-d428-471a-90d2-c3e5c622887e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## old function\n",
+    "# Update scores with the second dataset\n",
+    "def update_additional_month_scores(client_scores, second_dataframe):\n",
+    "    second_df['score'] = second_df['delay'].apply(lambda x: 3 if x == 'yes' else 0)\n",
+    "    new_scores = second_df.groupby('client_id').agg({\n",
+    "        'score': 'sum',\n",
+    "        'month': 'max'\n",
+    "    }).reset_index()\n",
+    "    new_rows = []\n",
+    "    for index, row in new_scores.iterrows():\n",
+    "        client_id = row['client_id']\n",
+    "        new_month = row['month']\n",
+    "        new_score = row['score']\n",
+    "    \n",
+    "        # Find the latest month score for the client in df1\n",
+    "        if client_id in client_scores['client_id'].values:\n",
+    "            # Update the score for the latest month\n",
+    "            latest_month_score = client_scores.loc[client_scores['client_id'] == client_id, 'score'].iloc[0]\n",
+    "            updated_score = latest_month_score + new_score\n",
+    "            \n",
+    "            # Create a new row for the updated score\n",
+    "            new_rows.append({'client_id': client_id, 'score': updated_score, 'month': new_month})\n",
+    "    \n",
+    "    # Step 2: Ensure all clients from df2 are included in df1\n",
+    "    for index, row in second_dataframe.iterrows():\n",
+    "        client_id = row['client_id']\n",
+    "        new_month = row['month']\n",
+    "        \n",
+    "        if client_id not in client_scores['client_id'].values:\n",
+    "            # If the client is not in df1, add their score and month\n",
+    "            new_rows.append({'client_id': client_id, 'score': row['score'], 'month': new_month})\n",
+    "    \n",
+    "    # Create a DataFrame from the new rows and concatenate it with df1\n",
+    "    if new_rows:\n",
+    "        new_df = pd.DataFrame(new_rows)\n",
+    "        client_scores = pd.concat([client_scores, new_df], ignore_index=True)\n",
+    "    \n",
+    "    # Step 3: Sort the DataFrame by client_id and month for better readability\n",
+    "    client_scores = client_scores.sort_values(by=['client_id', 'month']).reset_index(drop=True)\n",
+    "    \n",
+    "    return client_scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "f0e6ef96-a276-4318-ba61-ec16f2b92979",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client_initial_scores = calculate_initial_score(first_df)\n",
+    "client_scores_update = update_additional_month_scores(client_initial_scores, second_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "285340ef-5974-49d5-b7e2-4ecf987845ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   client_id  loan_id delay   month\n",
+      "0          1        1    no  202401\n",
+      "1          1        1    no  202402\n",
+      "2          1        1   yes  202403\n",
+      "3          1        2   yes  202401\n",
+      "4          1        2    no  202402\n",
+      "5          1        2    no  202403\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(third_df[third_df['client_id'] ==1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "c1ce75d7-c869-4e64-86a3-843ae93719a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client_scores_update = update_additional_month_scores(client_scores_update, third_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "143e2c88-a8ad-4f51-aa02-de3852e85295",
+   "id": "69d2f57a-389f-48e9-b5ab-3c47a1ac4dc9",
    "metadata": {},
    "outputs": [],
    "source": []
